@@ -1,5 +1,5 @@
 /* This file is part of VoltDB.
- * Copyright (C) 2008-2015 VoltDB Inc.
+ * Copyright (C) 2008-2016 VoltDB Inc.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -16,6 +16,7 @@
  */
 package org.voltdb.utils;
 
+import java.io.File;
 import java.io.FileWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -23,6 +24,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.NavigableSet;
 import java.util.Set;
 import java.util.TreeMap;
 
@@ -30,6 +32,11 @@ import org.voltdb.BackendTarget;
 import org.voltdb.ReplicationRole;
 import org.voltdb.StartAction;
 import org.voltdb.VoltDB;
+import org.voltdb.common.Constants;
+import org.voltdb.probe.MeshProber;
+
+import com.google_voltpatches.common.base.Joiner;
+import com.google_voltpatches.common.collect.ImmutableSortedSet;
 
 
 // VoltDB.Configuration represents all of the VoltDB command line parameters.
@@ -49,6 +56,8 @@ public class CommandLine extends VoltDB.Configuration
      * with JMX
      */
     private String m_vemTag = null;
+
+    public String m_modeOverrideForTest = null;
 
     public static final String VEM_TAG_PROPERTY = "org.voltdb.vemtag";
 
@@ -90,6 +99,7 @@ public class CommandLine extends VoltDB.Configuration
         cl.m_versionStringOverrideForTest = m_versionStringOverrideForTest;
         cl.m_versionCompatibilityRegexOverrideForTest = m_versionCompatibilityRegexOverrideForTest;
         cl.m_buildStringOverrideForTest = m_buildStringOverrideForTest;
+        cl.m_forceVoltdbCreate = m_forceVoltdbCreate;
 
         // second, copy the derived class fields
         cl.includeTestOpts = includeTestOpts;
@@ -109,6 +119,14 @@ public class CommandLine extends VoltDB.Configuration
         cl.jmxPort = jmxPort;
         cl.jmxHost = jmxHost;
         cl.customCmdLn = customCmdLn;
+        cl.m_isPaused = m_isPaused;
+        cl.m_meshBrokers = m_meshBrokers;
+        cl.m_coordinators = ImmutableSortedSet.copyOf(m_coordinators);
+        cl.m_hostCount = m_hostCount;
+        cl.m_enableAdd = m_enableAdd;
+        cl.m_voltdbRoot = m_voltdbRoot;
+        cl.m_newCli = m_newCli;
+        cl.m_placementGroup = m_placementGroup;
         // deep copy the property map if it exists
         if (javaProperties != null) {
             cl.javaProperties = new TreeMap<String, String>();
@@ -206,6 +224,28 @@ public class CommandLine extends VoltDB.Configuration
         return this;
     }
 
+    public void startPaused() {
+        m_isPaused = true;
+    }
+
+    public CommandLine enableAdd(boolean enableAdd) {
+        m_enableAdd = enableAdd;
+        return this;
+    }
+
+    public CommandLine safeMode(boolean safeMode) {
+        m_safeMode = safeMode;
+        return this;
+    }
+
+    public boolean safeMode() {
+        return m_safeMode;
+    }
+
+    public boolean enableAdd() {
+        return m_enableAdd;
+    }
+
     public CommandLine leader(String leader)
     {
         m_leader = leader;
@@ -217,6 +257,20 @@ public class CommandLine extends VoltDB.Configuration
         String hostname = MiscUtils.getHostnameFromHostnameColonPort(m_leader);
         m_leader = MiscUtils.getHostnameColonPortString(hostname, port);
         return this;
+    }
+
+    public CommandLine coordinators(String coordinators) {
+        m_coordinators = MeshProber.hosts(coordinators);
+        return this;
+    }
+
+    public CommandLine coordinators(NavigableSet<String> coordinators) {
+        m_coordinators = coordinators;
+        return this;
+    }
+
+    public NavigableSet<String> coordinators() {
+        return m_coordinators;
     }
 
     public CommandLine timestampSalt(int timestampSalt) {
@@ -292,6 +346,8 @@ public class CommandLine extends VoltDB.Configuration
 
     String voltFilePrefix = "";
     public CommandLine voltFilePrefix(String voltFilePrefix) {
+        if (m_newCli) return this;
+
         this.voltFilePrefix = voltFilePrefix;
         return this;
     }
@@ -324,7 +380,8 @@ public class CommandLine extends VoltDB.Configuration
 
     public CommandLine target(BackendTarget target) {
         m_backend = target;
-        m_noLoadLibVOLTDB = (target == BackendTarget.HSQLDB_BACKEND);
+        m_noLoadLibVOLTDB = (target == BackendTarget.HSQLDB_BACKEND ||
+                             target == BackendTarget.POSTGRESQL_BACKEND);
         return this;
     }
     public BackendTarget target() {
@@ -353,6 +410,29 @@ public class CommandLine extends VoltDB.Configuration
     }
     public int drAgentStartPort() {
         return m_drAgentPortStart;
+    }
+
+    public CommandLine hostCount(int hostCount) {
+        m_hostCount = hostCount <= 0 ? VoltDB.UNDEFINED : hostCount;
+        return this;
+    }
+
+    public int hostCount() {
+        return m_hostCount;
+    }
+
+    public CommandLine voltdbRoot(String voltdbRoot) {
+        m_voltdbRoot = new VoltFile(voltdbRoot);
+        return this;
+    }
+
+    public CommandLine voltdbRoot(File voltdbRoot) {
+        m_voltdbRoot = voltdbRoot;
+        return this;
+    }
+
+    public File voltdbRoot() {
+        return m_voltdbRoot;
     }
 
     String javaExecutable = "java";
@@ -385,6 +465,12 @@ public class CommandLine extends VoltDB.Configuration
     public CommandLine externalInterface(String externalInterface)
     {
         m_externalInterface = externalInterface;
+        return this;
+    }
+
+    public CommandLine setForceVoltdbCreate(boolean forceVoltdbCreate)
+    {
+        m_forceVoltdbCreate = forceVoltdbCreate;
         return this;
     }
 
@@ -458,6 +544,11 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("-Dsun.net.inetaddr.ttl=300");
         cmdline.add("-Dsun.net.inetaddr.negative.ttl=3600");
         cmdline.add("-Djava.library.path=" + java_library_path);
+        /*
+         * Facilitate SPNEGO (Kerberos HTTP) authentication
+         */
+        cmdline.add("-Djavax.security.auth.useSubjectCredsOnly=false");
+
         if (rmi_host_name != null)
             cmdline.add("-Djava.rmi.server.hostname=" + rmi_host_name);
         cmdline.add("-Dlog4j.configuration=" + log4j);
@@ -475,7 +566,6 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("-XX:CMSInitiatingOccupancyFraction=75");
         cmdline.add("-XX:+UseCMSInitiatingOccupancyOnly");
         cmdline.add("-XX:+CMSClassUnloadingEnabled");
-        cmdline.add("-XX:PermSize=64m");
 
         /*
          * Have RMI not invoke System.gc constantly
@@ -503,10 +593,11 @@ public class CommandLine extends VoltDB.Configuration
         if (includeTestOpts)
         {
             cmdline.add("-DLOG_SEGMENT_SIZE=8");
-            cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            if (!m_newCli) {
+                cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            }
             cmdline.add("-ea");
             cmdline.add("-XX:MaxDirectMemorySize=2g");
-            cmdline.add("-XX:-UseSplitVerifier");
         }
         else
         {
@@ -553,11 +644,27 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("org.voltdb.VoltDB");
         cmdline.add(m_startAction.verb());
 
-        cmdline.add("host"); cmdline.add(m_leader);
+        if (m_startAction == StartAction.PROBE && m_safeMode) {
+            cmdline.add("safemode");
+        }
+
+        if (m_startAction == StartAction.PROBE && m_enableAdd) {
+            cmdline.add("enableadd");
+        }
+
+        cmdline.add("host");
+        if (!m_coordinators.isEmpty()) {
+            cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
+        } else {
+            cmdline.add(m_leader);
+        }
         if (jarFileName() != null) {
             cmdline.add("catalog"); cmdline.add(jarFileName());
         }
-        cmdline.add("deployment"); cmdline.add(pathToDeployment());
+        //Add deployment if its not probe
+        if (pathToDeployment() != null && m_startAction != StartAction.PROBE) {
+            cmdline.add("deployment"); cmdline.add(pathToDeployment());
+        }
 
         // rejoin has no replication role
         if (!m_startAction.doesRejoin()) {
@@ -599,6 +706,14 @@ public class CommandLine extends VoltDB.Configuration
         {
             cmdline.add("externalinterface"); cmdline.add(m_externalInterface);
         }
+        if (m_httpPort != Constants.HTTP_PORT_DISABLED) {
+            cmdline.add("httpport"); cmdline.add(Integer.toString(m_httpPort));
+        }
+
+        if (m_forceVoltdbCreate)
+        {
+            cmdline.add("force");
+        }
 
         if (m_isEnterprise) {
             cmdline.add("license"); cmdline.add(m_pathToLicense);
@@ -626,6 +741,10 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("ipc");
         }
 
+        if (m_tag != null) {
+            cmdline.add("tag"); cmdline.add(m_tag);
+        }
+
         // handle overrides for testing hotfix version compatibility
         if (m_versionStringOverrideForTest != null) {
             assert(m_versionCompatibilityRegexOverrideForTest != null);
@@ -637,11 +756,27 @@ public class CommandLine extends VoltDB.Configuration
                 cmdline.add(m_buildStringOverrideForTest);
             }
         }
-
-        if (m_tag != null) {
-            cmdline.add("tag"); cmdline.add(m_tag);
+        if (m_isPaused || (m_modeOverrideForTest != null && m_modeOverrideForTest.equalsIgnoreCase("paused")) ) {
+            cmdline.add("paused");
         }
 
+        if (m_sitesperhost != VoltDB.UNDEFINED) {
+            cmdline.add("sitesperhost");
+            cmdline.add(Integer.toString(m_sitesperhost));
+        }
+
+        //Add mesh and hostcount for probe only.
+        if (m_startAction == StartAction.PROBE) {
+            cmdline.add("mesh"); cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
+            cmdline.add("hostcount"); cmdline.add(Integer.toString(m_hostCount));
+        }
+
+        if (!m_startAction.isLegacy()) {
+            cmdline.add("voltdbroot"); cmdline.add(m_voltdbRoot.getPath());
+        }
+        if (m_placementGroup != null) {
+            cmdline.add("placementgroup"); cmdline.add(m_placementGroup);
+        }
         return cmdline;
     }
 
@@ -901,4 +1036,15 @@ public class CommandLine extends VoltDB.Configuration
         }
     }
 
+    boolean m_newCli = false;
+    //Return true if we are going to run init and start.
+    boolean isNewCli() {
+        return m_newCli;
+    }
+    public void setNewCli(boolean flag) { m_newCli = flag; };
+
+    String m_placementGroup = "";
+    public void setPlacementGroup(String placementGroup) {
+        m_placementGroup = placementGroup;
+    }
 }
